--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -35,7 +35,7 @@
           <div class="sm:flex sm:items-start">
             <div class="mt-3 items-center justify-center text-center sm:mt-0 sm:text-left">
               <div class="flex items-center justify-between py-4">
-                <button class="text-gray-700 hover:text-gray-900" aria-label="Close">
+                <button class="text-gray-700 hover:text-gray-900 px-2" aria-label="Close" id="closeModal">
                   <i class="fa-solid fa-xmark"></i>
                 </button>
                 <h3 class="text-center font-semibold text-gray-900 flex-grow" id="modal-title">Login or sign up</h3>
@@ -79,9 +79,11 @@
           <button type="button" class="w-full flex justify-center items-center rounded-md border-2 border-gray-900 px-3 py-3 text-md font-normal text-black hover:bg-gray-100 transition-colors duration-100">Continue with Google</button>
         </div>
         <div class=" px-4 py-2 sm:px-6">
+          
           <button type="button" class="w-full flex justify-center items-center rounded-md border-2 border-gray-900 px-3 py-3 text-md font-normal text-black hover:bg-gray-100 transition-colors duration-100">Continue with Apple</button>
         </div>
         <div class=" px-4 pt-1 pb-5 sm:px-6">
+          
           <button type="button" class="w-full flex justify-center items-center rounded-md border-2 border-gray-900 px-3 py-3 text-md font-normal text-black hover:bg-gray-100 transition-colors duration-100">Continue with Phone</button>
         </div>
       </div>
