--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     </style>
     <%= javascript_importmap_tags %>
     <%= favicon_link_tag asset_path="icon.png" %>
+    <%= hotwire_livereload_tags if Rails.env.development? %>
   </head>
 
   <body>
