--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,34 +29,41 @@
                          placeholder: "enter your password",
                         class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-red-600 focus:border-red-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-red-500 dark:focus:border-red-500"%>
                     </div>
-                    <div class= "my-5 relative">
+                    <div class= "mt-5 relative">
                         <%= f.label :password_confirmation, class:"block -mb-3 text-sm font-medium text-gray-900 dark:text-white" %><br />
                         <%= f.password_field :password_confirmation,
                         autocomplete: "new-password",
                         data: { password_toggle_target: "password" },
                         placeholder: "confirm password",
                         class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-red-600 focus:border-red-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-red-500 dark:focus:border-red-500" %>
-                      <button type="button"
-                              data-password-toggle-target="toggleButton" 
-                              data-action="password-toggle#toggle" 
-                              class="absolute right-2 pt-2 top-20 transform -translate-y-1/2 text-gray-400 text-xs">
-                        <span data-password-toggle-target="eyeIcon">Show password</span>
-                      </button>
+                    </div>
+                    <div class="flex items-center justify-between mt-2">
+                      <div class="flex items-start">
+                      </div>
+                        <button type="button"
+                          data-password-toggle-target="toggleButton" 
+                          data-action="password-toggle#toggle" 
+                          class="text-xs text-gray-400 hover:text-gray-700">
+                          <span data-password-toggle-target="eyeIcon">Show password</span>
+                        </button>
                     </div>
                     <div class="flex items-start my-5">
-                        <div class="flex items-center h-5">
-                          <input id="terms" aria-describedby="terms" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-red-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-red-600 dark:ring-offset-gray-800" required="">
-                        </div>
-                        <div class="ml-3 text-sm">
-                          <label for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a class="font-medium text-red-600 hover:underline dark:text-grey-500" href="#">Terms and Conditions</a></label>
-                        </div>
+                      <div class="flex items-center h-5">
+                        <input id="terms" aria-describedby="terms" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-red-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-red-600 dark:ring-offset-gray-800" required="">
+                      </div>
+                      <div class="ml-3 text-sm">
+                        <label for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a class="font-medium text-red-600 hover:underline dark:text-grey-500" href="#">Terms and Conditions</a></label>
+                      </div>
                     </div>
                     <button class="my-5 w-full text-white bg-[#dc1756] hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
                       
                       <%= f.submit "Sign up" %>
                     </button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                        Already have an account? <a href="#" class="font-medium text-red-600 hover:underline dark:text-red-500">Login here</a>
+                        Already have an account? 
+                        <%= link_to user_session_path, class:"font-medium text-red-600 hover:underline dark:text-red-500" do%>
+                          Login here
+                        <% end %>
                     </p>
                 <% end %>
               </div>
